# pamphletize

./: README.md  pyproject.toml
pamphletize/: README.md  __main__.py  main.py
